cbits/skia_capi/skparagraph.h

SK_C_API void skparagraph_paragraph_style_set_apply_rounding_hack(
    skparagraph_paragraph_style_t *para, bool v
);
// Paragraph

SK_C_API void skparagraph_paragraph_delete(skparagraph_paragraph_t *para);
SK_C_API sk_scalar_t
skparagraph_paragraph_get_max_width(skparagraph_paragraph_t *paragraph);
SK_C_API sk_scalar_t
skparagraph_paragraph_get_height(skparagraph_paragraph_t *paragraph);
SK_C_API sk_scalar_t skparagraph_paragraph_get_min_intrinsic_width(
    skparagraph_paragraph_t *paragraph
);
SK_C_API sk_scalar_t skparagraph_paragraph_get_max_intrinsic_width(
    skparagraph_paragraph_t *paragraph
);
SK_C_API sk_scalar_t skparagraph_paragraph_get_alphabetic_baseline(
    skparagraph_paragraph_t *paragraph
);
SK_C_API sk_scalar_t skparagraph_paragraph_get_ideographic_baseline(
    skparagraph_paragraph_t *paragraph
);
SK_C_API sk_scalar_t
skparagraph_paragraph_get_longest_line(skparagraph_paragraph_t *paragraph);
SK_C_API bool skparagraph_paragraph_did_exceed_max_lines(
    skparagraph_paragraph_t *paragraph
);
SK_C_API void skparagraph_paragraph_layout(
    skparagraph_paragraph_t *para, sk_scalar_t width
);
SK_C_API void skparagraph_paragraph_paint_with_canvas(
    skparagraph_paragraph_t *para, sk_canvas_t *canvas, sk_scalar_t x,
    sk_scalar_t y
);
SK_C_API void skparagraph_paragraph_paint_with_painter(
    skparagraph_paragraph_t *para, skparagraph_paragraph_painter_t *painter,
    sk_scalar_t x, sk_scalar_t y
);
// SKParagraph's so-called "Editing API"

SK_C_API int skparagraph_paragraph_get_line_number_at(
    skparagraph_paragraph_t *para, size_t codeUnitIndex
);
SK_C_API bool skparagraph_paragraph_get_line_metrics_at(
    skparagraph_paragraph_t *para, int lineNumber,
    skparagraph_line_metrics_t *dstMetrics
);
SK_C_API bool skparagraph_paragraph_get_closest_glyph_cluster_at(
    skparagraph_paragraph_t *para, sk_scalar_t x, sk_scalar_t y,
    skparagraph_glyph_cluster_info_t *dstGlyphInfo
);
// Returns true if glyph cluster was found; false if not (which usually means
// the paragraph is empty)
SK_C_API bool skparagraph_paragraph_get_glyph_cluster_at(
    skparagraph_paragraph_t *para, int codeUnitIndex,
    skparagraph_glyph_cluster_info_t *dstGlyphInfo
);