src/Skia/Bindings/Skparagraph.hs


@
void skparagraph_paragraph_style_set_apply_rounding_hack(skparagraph_paragraph_style_t *para, _Bool v)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_apply_rounding_hack" skparagraph_paragraph_style_set_apply_rounding_hack ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> CBool -- ^ C argument @"_Bool v"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_apply_rounding_hack'
foreign import ccall "&skparagraph_paragraph_style_set_apply_rounding_hack" p'skparagraph_paragraph_style_set_apply_rounding_hack ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> CBool -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_delete(skparagraph_paragraph_t *para)
@
-}
foreign import ccall "skparagraph_paragraph_delete" skparagraph_paragraph_delete ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_delete'
foreign import ccall "&skparagraph_paragraph_delete" p'skparagraph_paragraph_delete ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (()))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_max_width(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_max_width" skparagraph_paragraph_get_max_width ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_max_width'
foreign import ccall "&skparagraph_paragraph_get_max_width" p'skparagraph_paragraph_get_max_width ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_height(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_height" skparagraph_paragraph_get_height ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_height'
foreign import ccall "&skparagraph_paragraph_get_height" p'skparagraph_paragraph_get_height ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_min_intrinsic_width(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_min_intrinsic_width" skparagraph_paragraph_get_min_intrinsic_width ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_min_intrinsic_width'
foreign import ccall "&skparagraph_paragraph_get_min_intrinsic_width" p'skparagraph_paragraph_get_min_intrinsic_width ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_max_intrinsic_width(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_max_intrinsic_width" skparagraph_paragraph_get_max_intrinsic_width ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_max_intrinsic_width'
foreign import ccall "&skparagraph_paragraph_get_max_intrinsic_width" p'skparagraph_paragraph_get_max_intrinsic_width ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_alphabetic_baseline(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_alphabetic_baseline" skparagraph_paragraph_get_alphabetic_baseline ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_alphabetic_baseline'
foreign import ccall "&skparagraph_paragraph_get_alphabetic_baseline" p'skparagraph_paragraph_get_alphabetic_baseline ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_ideographic_baseline(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_ideographic_baseline" skparagraph_paragraph_get_ideographic_baseline ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_ideographic_baseline'
foreign import ccall "&skparagraph_paragraph_get_ideographic_baseline" p'skparagraph_paragraph_get_ideographic_baseline ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
sk_scalar_t skparagraph_paragraph_get_longest_line(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_get_longest_line" skparagraph_paragraph_get_longest_line ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (Sk_scalar) -- ^ C return type: @"sk_scalar_t"@

-- | Function pointer to 'skparagraph_paragraph_get_longest_line'
foreign import ccall "&skparagraph_paragraph_get_longest_line" p'skparagraph_paragraph_get_longest_line ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (Sk_scalar))

{- | C function signature:

@
_Bool skparagraph_paragraph_did_exceed_max_lines(skparagraph_paragraph_t *paragraph)
@
-}
foreign import ccall "skparagraph_paragraph_did_exceed_max_lines" skparagraph_paragraph_did_exceed_max_lines ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * paragraph"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'skparagraph_paragraph_did_exceed_max_lines'
foreign import ccall "&skparagraph_paragraph_did_exceed_max_lines" p'skparagraph_paragraph_did_exceed_max_lines ::
  FunPtr (Ptr (Skparagraph_paragraph) -> IO (CBool))

{- | C function signature:

@
void skparagraph_paragraph_layout(skparagraph_paragraph_t *para, sk_scalar_t width)
@
-}
foreign import ccall "skparagraph_paragraph_layout" skparagraph_paragraph_layout ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t width"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_layout'
foreign import ccall "&skparagraph_paragraph_layout" p'skparagraph_paragraph_layout ::
  FunPtr (Ptr (Skparagraph_paragraph) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_paint_with_canvas(skparagraph_paragraph_t *para, sk_canvas_t *canvas, sk_scalar_t x, sk_scalar_t y)
@
-}
foreign import ccall "skparagraph_paragraph_paint_with_canvas" skparagraph_paragraph_paint_with_canvas ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * canvas"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t x"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t y"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_paint_with_canvas'
foreign import ccall "&skparagraph_paragraph_paint_with_canvas" p'skparagraph_paragraph_paint_with_canvas ::
  FunPtr (Ptr (Skparagraph_paragraph) -> Ptr (Sk_canvas) -> Sk_scalar -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_paint_with_painter(skparagraph_paragraph_t *para, skparagraph_paragraph_painter_t *painter, sk_scalar_t x, sk_scalar_t y)
@
-}
foreign import ccall "skparagraph_paragraph_paint_with_painter" skparagraph_paragraph_paint_with_painter ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> Ptr (Skparagraph_paragraph_painter) -- ^ C argument @"skparagraph_paragraph_painter_t * painter"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t x"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t y"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_paint_with_painter'
foreign import ccall "&skparagraph_paragraph_paint_with_painter" p'skparagraph_paragraph_paint_with_painter ::
  FunPtr (Ptr (Skparagraph_paragraph) -> Ptr (Skparagraph_paragraph_painter) -> Sk_scalar -> Sk_scalar -> IO (()))

{- | C function signature:

@
int skparagraph_paragraph_get_line_number_at(skparagraph_paragraph_t *para, size_t codeUnitIndex)
@
-}
foreign import ccall "skparagraph_paragraph_get_line_number_at" skparagraph_paragraph_get_line_number_at ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> CSize -- ^ C argument @"size_t codeUnitIndex"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'skparagraph_paragraph_get_line_number_at'
foreign import ccall "&skparagraph_paragraph_get_line_number_at" p'skparagraph_paragraph_get_line_number_at ::
  FunPtr (Ptr (Skparagraph_paragraph) -> CSize -> IO (CInt))

{- | C function signature:

@
_Bool skparagraph_paragraph_get_line_metrics_at(skparagraph_paragraph_t *para, int lineNumber, skparagraph_line_metrics_t *dstMetrics)
@
-}
foreign import ccall "skparagraph_paragraph_get_line_metrics_at" skparagraph_paragraph_get_line_metrics_at ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> CInt -- ^ C argument @"int lineNumber"@
  -> Ptr (Skparagraph_line_metrics) -- ^ C argument @"skparagraph_line_metrics_t * dstMetrics"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'skparagraph_paragraph_get_line_metrics_at'
foreign import ccall "&skparagraph_paragraph_get_line_metrics_at" p'skparagraph_paragraph_get_line_metrics_at ::
  FunPtr (Ptr (Skparagraph_paragraph) -> CInt -> Ptr (Skparagraph_line_metrics) -> IO (CBool))

{- | C function signature:

@
_Bool skparagraph_paragraph_get_closest_glyph_cluster_at(skparagraph_paragraph_t *para, sk_scalar_t x, sk_scalar_t y, skparagraph_glyph_cluster_info_t *dstGlyphInfo)
@
-}
foreign import ccall "skparagraph_paragraph_get_closest_glyph_cluster_at" skparagraph_paragraph_get_closest_glyph_cluster_at ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t x"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t y"@
  -> Ptr (Skparagraph_glyph_cluster_info) -- ^ C argument @"skparagraph_glyph_cluster_info_t * dstGlyphInfo"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'skparagraph_paragraph_get_closest_glyph_cluster_at'
foreign import ccall "&skparagraph_paragraph_get_closest_glyph_cluster_at" p'skparagraph_paragraph_get_closest_glyph_cluster_at ::
  FunPtr (Ptr (Skparagraph_paragraph) -> Sk_scalar -> Sk_scalar -> Ptr (Skparagraph_glyph_cluster_info) -> IO (CBool))

{- | C function signature:

@
_Bool skparagraph_paragraph_get_glyph_cluster_at(skparagraph_paragraph_t *para, int codeUnitIndex, skparagraph_glyph_cluster_info_t *dstGlyphInfo)
@
-}
foreign import ccall "skparagraph_paragraph_get_glyph_cluster_at" skparagraph_paragraph_get_glyph_cluster_at ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> CInt -- ^ C argument @"int codeUnitIndex"@
  -> Ptr (Skparagraph_glyph_cluster_info) -- ^ C argument @"skparagraph_glyph_cluster_info_t * dstGlyphInfo"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'skparagraph_paragraph_get_glyph_cluster_at'
foreign import ccall "&skparagraph_paragraph_get_glyph_cluster_at" p'skparagraph_paragraph_get_glyph_cluster_at ::
  FunPtr (Ptr (Skparagraph_paragraph) -> CInt -> Ptr (Skparagraph_glyph_cluster_info) -> IO (CBool))

{- | C function signature:
